# FrameExtractor

./: .gitignore  App.axaml  App.axaml.cs  CMakeLists.txt  Changelog.md  FrameExtractor.csproj  FrameExtractor.py  FrameExtractor.sln  LICENSE  Program.cs  README.md  app.manifest
.github/: FUNDING.yml
.github/workflows/: build-linux.yml  build-windows.yml  build.yml  release.yml
Helpers/: RoundedWindowHelper.cs
Services/: FFmpegService.cs  Logger.cs  SettingsService.cs  VideoThumbnailService.cs
ViewModels/: MainWindowViewModel.cs
Views/: DownloadDialog.axaml  DownloadDialog.axaml.cs  DownloadDialog.cs  ErrorDialog.axaml  ErrorDialog.axaml.cs  ErrorDialog.cs  LogDialog.axaml  LogDialog.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs
packaging/: AppRun  FrameExtractor.desktop
src/: FrameExtractor.cpp
src/utils/: DownloadDialog.cpp  DownloadDialog.h  DownloadFFmpeg.cpp  DownloadFFmpeg.h  FindFFmpeg.cpp  FindFFmpeg.h  GetVideoDuration.cpp  GetVideoDuration.h  find_ffmpeg.cpp
tests/: CMakeLists.txt  TestMainWindow.cpp  TestMainWindow.h  test.cpp
